# modoboa-radicale

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tests.py
.github/workflows/: plugin.yml
.tx/: config
docs/: Makefile  conf.py  index.rst  setup.rst
frontend/: .eslintrc.js  Makefile  README.md  index.html  package.json  vue.config.js
frontend/config/: index.js
frontend/locale/br/LC_MESSAGES/: app.po
frontend/src/: App.vue  api.js  main.js  translations.json
frontend/src/components/: AccessRuleField.vue  Calendar.vue  CalendarAccessRulesForm.vue  CalendarDetail.vue  CalendarForm.vue  CreateEventForm.vue  EventForm.vue  ImportEventsForm.vue  Modal.vue  SearchForm.vue
frontend/src/router/: index.js
frontend/src/store/: index.js  mutation-types.js
frontend/src/tools/: permissions.js
frontend/tests/unit/: karma.conf.js
modoboa_radicale/: __init__.py  app_settings.py  apps.py  constants.py  factories.py  forms.py  general_callbacks.py  handlers.py  mocks.py  models.py  modo_extension.py  serializers.py  settings.py  tests.py  tools.py  urls.py  urls_api.py  views.py  viewsets.py
modoboa_radicale/backends/: __init__.py  caldav_.py
modoboa_radicale/management/commands/: generate_rights.py
modoboa_radicale/migrations/: 0001_initial.py  0002_auto_20170831_1721.py  0003_auto_20180324_1834.py  0004_auto_20200220_1816.py  0005_auto_20200220_1819.py  0006_auto_20200507_1554.py
modoboa_radicale/templates/modoboa_radicale/: calendar_display.html  calendars.html
modoboa_radicale/templatetags/: radicale_tags.py
test_project/test_project/: settings.py  webpack-stats.json
(+33 files in other folders)
